# coco_chat

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: control_manager_node.hpp  llm_lifecycle_node.hpp
launch/: buddy_chat.launch.py  coco_chat.launch.py
scripts/: buddy_chat.py  control_manager_node.py  download_models.py  llm_lifecycle_node.py  stt_lifecycle_node.py  tts_lifecycle_node.py
scripts/utils/: config.py  movement_agent.py  react_state.py  state_graph.py  text_processor.py
src/: control_manager_node.cpp  llm_lifecycle_node.cpp
